[package]
name = "lang-char-freq"
version = "0.1.0"
authors = ["Cassaundra <cass@cassaundra.io>"]
edition = "2018"

[dependencies]
bytes = "0.5.4"
flate2 = "1.0.14"
futures = "0.3"
plotters = "0.2.12"    
reqwest = { version = "0.10", features = ["json", "stream"] }
serde = { version = "1.0.105", features = ["derive"] }
serde_json = "1.0"
tar = "0.4.26"
tokio = { version = "0.2", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.2.4"
zip = "0.5.5"